@@ -1,3 +1,11 @@
+2006-03-03  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* libsteticui/SignalsEditor.cs: Add the name of the widget
+	  to the handler name, to avoid collisions when mapping
+	  the same event from different widgets.
+	* libstetic/wrapper/Notebook.cs: Added some specific generation
+	  code.
+
 2006-03-02  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* libsteticui/CodeGenerator.cs: Generated class is not internal.
